# SCUSportQuery

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  SportQueryDBRead.cpp  SportQueryDBRead.h  SportQuestion.cpp  SportQuestion.h  SportQuestionListModel.cpp  SportQuestionListModel.h  main.cpp
.github/workflows/: build.yml
android/: AndroidManifest.xml
